--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="IE=Edge">
-        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <title>RPG_Tsukuru</title>
         <script type="text/javascript" src="libs/enchantJS/enchant.js"></script>
         <script type="text/javascript" src="libs/enchantJS/plugins/ui.enchant.js"></script>
+        <script type="text/javascript" src="framework/js/prototype.js"></script>
         <script type="text/javascript" src="game.js"></script>
         <style type="text/css">
             body {
@@ -17,5 +18,6 @@
         </style>
     </head>
     <body>
+      <div id="enchant-stage"></div>
     </body>
 </html>
